# subprocess-tee

./: .dockerignore  .gitignore  .packit.yaml  .pre-commit-config.yaml  .prettierrc.yaml  Dockerfile  MANIFEST.in  README.md  cspell.config.yaml  mkdocs.yml  mypy.ini  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  tox.ini
.config/: constraints.txt  dictionary.txt  requirements-docs.in  requirements-lock.txt  requirements-test.in  subprocess-tee.spec
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release-drafter.yml  release.yml  tox.yml
lib/subprocess_tee/: __init__.py  rich.py
lib/subprocess_tee/test/: __init__.py  test_rich.py  test_unit.py
molecule/default/: converge.yml
src/subprocess_tee/: __init__.py  _types.py
src/subprocess_tee/test/: test_unit.py
test/: test_func.py  test_rich.py  test_unit.py
tools/: update-version.sh
