[build-system]
build-backend = "setuptools.build_meta"
requires = [
  # Needed for PEP 621 support
  "setuptools >= 61.0",
  "setuptools_scm[toml] >= 7.0.0"
]

[project]
authors = [
  {"email" = "sorin.sbarnea@gmail.com", "name" = "Sorin Sbarnea"}
]
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities"
]
description = "subprocess-tee"
dynamic = ["version"]
keywords = ["subprocess", "asyncio"]
license = {text = "MIT"}
maintainers = [
  {"email" = "sorin.sbarnea@gmail.com", "name" = "Sorin Sbarnea"}
]
name = "subprocess-tee"
readme = "README.md"
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.9"

[project.optional-dependencies]
docs = [
  "argparse-manpage",
  "cairosvg",
  "markdown-include",
  "mkdocs",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "mkdocstrings",
  "mkdocstrings-python",
  "pillow",
  "pymdown-extensions"
]
test = [
  "enrich>=1.2.6",
  "molecule>=3.4.0", # ansible is needed but no direct imports are made
  "pytest-cov>=2.12.1",
  "pytest-instafail",
  "pytest-plus>=0.2",
  "pytest-xdist>=2.3.0",
  "pytest>=6.2.5"
]

[project.urls]
changelog = "https://github.com/pycontribs/subprocess-tee/releases"
documentation = "https://subprocess-tee.readthedocs.io"
homepage = "https://github.com/pycontribs/subprocess-tee"
repository = "https://github.com/pycontribs/subprocess-tee"

[tool.black]
target-version = ["py39"]

[tool.mypy]
color_output = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
error_summary = true
python_version = "3.9"
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.9"

[tool.ruff]
cache-dir = "./.cache/.ruff"
fix = true
# Same as Black.
line-length = 88
preview = true
target-version = "py39"

[tool.ruff.lint]
ignore = [
  "COM812", # conflicts with ISC001 on format
  "CPY001", # missing-copyright-notice
  "D203", # incompatible with D211
  "D213", # incompatible with D212
  "E501", # we use black
  "ERA001", # auto-removal of commented out code affects development and vscode integration
  "INP001", # "is part of an implicit namespace package", all false positives
  "ISC001", # conflicts with COM812 on format
  "PLW2901", # PLW2901: Redefined loop variable
  "RET504", # Unnecessary variable assignment before `return` statement
  # temporary disabled until we fix them:
  "ANN",
  "PLR",
  "ASYNC230"
]
select = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["S", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true
