[metadata]
name = subprocess-tee
url = https://github.com/pycontribs/subprocess-tee
project_urls =
    Bug Tracker = https://github.com/pycontribs/subprocess-tee/issues
    Release Management = https://github.com/pycontribs/subprocess-tee/releases
    CI = https://github.com/pycontribs/subprocess-tee/actions
    Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Documentation = https://subprocess-tee.readthedocs.io
    Discussions = https://github.com/pycontribs/subprocess-tee/discussions
    Source Code = https://github.com/pycontribs/subprocess-tee
description = subprocess-tee
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    Operating System :: OS Independent

    License :: OSI Approved :: MIT License

    Programming Language :: Python

    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    subprocess
    asyncio

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = lib
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
; install_requires =

[options.extras_require]
test =
    enrich>=1.2.5
    mock>=3.0.5
    pytest-cov>=2.7.1
    pytest-plus
    pytest-xdist>=1.29.0
    pytest>=6.1.0
rich =
    enrich >= 9.5.1

[options.packages.find]
where = lib

[options.package_data]
subprocess_tee =
    *.typed
    *.pyi

[tool:pytest]
addopts = --doctest-modules --durations 10 --durations-min=3 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
norecursedirs = dist doc build .tox .eggs
testpaths = lib
filterwarnings =
    # treat warnings as errors unless we add them below
    error
    # ignore::UserWarning

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D
# 88 is official black default:
max-line-length = 88
